Bug 542248 - ASSERTION: Shouldn't return null and NPERR_NO_ERROR (and then crash) navigation from one silverlight page to another, r=josh