modules/plugin/base/src/nsNPAPIPlugin.cpp
@@ -2128,7 +2128,7 @@ _getvalue(NPP npp, NPNVariable variable, void *result)
   case NPNVPluginElementNPObject: {
     *(NPObject **)result = _getpluginelement(npp);
 
-    return NPERR_NO_ERROR;
+    return *(NPObject **)result ? NPERR_NO_ERROR : NPERR_GENERIC_ERROR;
   }
 
   case NPNVSupportsWindowless: {
